# brainshare-og

./: .env.example  .gitignore  .project  DESIGN.md  README.md  docker-compose.override.yml  docker-compose.yml
brain-cli/: README.md  pyproject.toml  setup.py
brain-cli/brain-cli/: brain.py
brain-cli/brain_cli/: __main__.py  main.py
brain-cli/brain_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brain-cli/tests/: test_brain_cli.py
db/: Dockerfile
deploy/: docker-compose.dev.yml
frontend/: .eslintrc.yml  Dockerfile  README.md  package.json  tailwind.config.js
frontend/src/: index.css  index.tsx
frontend/src/api/: auth.ts  supabaseClient.ts  useTableParser.ts  useTablePasers.ts
frontend/src/components/: Account.tsx  Components.tsx  DatabaseList.tsx  DatabaseView.tsx  DebugBar.tsx  Home.tsx  LogIn.tsx  Navigation.tsx  NavigationBar.tsx  PageLayout.tsx  PrepareBase.tsx  Table.tsx  Upload.tsx  UploadDetail.tsx  Uploads.tsx
function-server/: .dockerignore  Dockerfile  requirements.txt
function-server/function_server/: __init__.py  app.py
graphiql/: Dockerfile  index.html
migrations/: .env.example  package.json
migrations/prisma/: TODO-dramatiq-pg.sql  schema.prisma
schema/: table-parser.json
table-parser/: .devcontainer.json  .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
table-parser/src/: app.py  test_util.py  util.py
table-parser/table_parser/: __init__.py  app.py  util.py
table-parser/test_data/: Book1.xlsx
task-worker-py/: Dockerfile  requirements.txt  tasks.py
volumes/api/: kong.yml
(+24 files in other folders)
